archive/alive/Parsing/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from .\src\Parsing\Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Program                           (0)
	Program -> Statement Program                       (1)
	Program ->                                         (2)
	Statement -> Expr ';'                              (3)
	Statement -> IfStatement                           (4)
	Statement -> ForStatement                          (5)
	Statement -> PRINT '(' var ')' ';'                 (6)
	Expr -> FuncAppExpr                                (7)
	Expr -> BoolExpr                                   (8)
	Expr -> AssignExpr                                 (9)
	Expr -> Assignable                                 (10)
	Expr -> LiteralExpr                                (11)
	Expr -> '(' Expr ')'                               (12)
	LiteralExpr -> READFILE '(' string ')' ';'         (13)
	LiteralExpr -> MathExpr                            (14)
	LiteralExpr -> bigField                            (15)
	LiteralExpr -> string                              (16)
	LiteralExpr -> regex                               (17)
	LiteralExpr -> var '.' GETNODE '(' Expr ')'        (18)
	AssignExpr -> Type var '=' Expr                    (19)
	AssignExpr -> Assignable '=' Expr                  (20)
	AssignExpr -> Type var                             (21)
	AssignExpr -> Assignable '+=' Expr                 (22)
	AssignExpr -> Assignable '-=' Expr                 (23)
	Assignable -> var                                  (24)
	Assignable -> var '.' var                          (25)
	Assignable -> var '.' bigField                     (26)
	FuncAppExpr -> var '.' MATCH '(' BoolExpr ')'      (27)
	FuncAppExpr -> var '.' ADD '(' Expr ')'            (28)
	FuncAppExpr -> var '.' GETRELATION '(' BoolExpr ')'   (29)
	FuncAppExpr -> var '.' EXCLUDE '(' Expr ')'        (30)
	MathExpr -> MathTerm                               (31)
	MathExpr -> MathExpr '+' MathExpr                  (32)
	MathExpr -> MathExpr '-' MathExpr                  (33)
	MathTerm -> MathExpr '*' MathExpr                  (34)
	MathTerm -> MathExpr '/' MathExpr                  (35)
	MathTerm -> int                                    (36)
	BoolExpr -> Expr '&&' Expr                         (37)
	BoolExpr -> Expr '||' Expr                         (38)
	BoolExpr -> SimpleBoolExpr                         (39)
	SimpleBoolExpr -> True                             (40)
	SimpleBoolExpr -> False                            (41)
	SimpleBoolExpr -> Expr '==' Expr                   (42)
	SimpleBoolExpr -> Expr '!=' Expr                   (43)
	SimpleBoolExpr -> Expr '<' Expr                    (44)
	SimpleBoolExpr -> Expr '>' Expr                    (45)
	SimpleBoolExpr -> Expr '<=' Expr                   (46)
	SimpleBoolExpr -> Expr '>=' Expr                   (47)
	SimpleBoolExpr -> '-' '[' BoolExpr ']' '->' var    (48)
	SimpleBoolExpr -> var '-' '[' BoolExpr ']' '->'    (49)
	SimpleBoolExpr -> '(' BoolExpr ')'                 (50)
	SimpleBoolExpr -> var '-' '[' BoolExpr ']' '->' var   (51)
	SimpleBoolExpr -> Expr '.' CONTAINS '(' StringList ')'   (52)
	IfStatement -> IF '(' BoolExpr ')' '{' Program '}'   (53)
	IfStatement -> IF '(' BoolExpr ')' '{' Program '}' ELSE '{' Program '}'   (54)
	ForStatement -> FOR '(' Type var ':' Expr ')' '{' Program '}'   (55)
	StringList -> string                               (56)
	StringList -> string ',' StringList                (57)
	Type -> GraphType                                  (58)
	Type -> IntegerType                                (59)
	Type -> StringType                                 (60)
	Type -> BooleanType                                (61)
	Type -> NodeType                                   (62)
	Type -> RelationType                               (63)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { Tn (TokenInt $$)       _ }
	READFILE       { Tn (TokenReadFile)     _ }
	MATCH          { Tn (TokenMatch)        _ }
	PRINT          { Tn (TokenPrint)        _ }
	'&&'           { Tn (TokenAnd)          _ }
	'||'           { Tn (TokenOr)           _ }
	'('            { Tn (TokenLParen)       _ }
	')'            { Tn (TokenRParen)       _ }
	GraphType      { Tn (TokenGraphType)    _ }
	IntegerType    { Tn (TokenIntegerType)  _ }
	StringType     { Tn (TokenStringType)   _ }
	BooleanType    { Tn (TokenBooleanType)  _ }
	'{'            { Tn (TokenLCurl)        _ }
	'}'            { Tn (TokenRCurl)        _ }
	IF             { Tn (TokenIf)           _ }
	ELSE           { Tn (TokenElse)         _ }
	FOR            { Tn (TokenFor)          _ }
	':'            { Tn (TokenColon)        _ }
	var            { Tn (TokenVar $$)       _ }
	'>='           { Tn (TokenGEQ)          _ }
	'<='           { Tn (TokenLEQ)          _ }
	'>'            { Tn (TokenGT)           _ }
	'<'            { Tn (TokenLT)           _ }
	'='            { Tn (TokenAssign)       _ }
	'=='           { Tn (TokenEquals)       _ }
	'['            { Tn (TokenLSQ)          _ }
	']'            { Tn (TokenRSQ)          _ }
	'->'           { Tn (TokenRArrow)       _ }
	'-'            { Tn (TokenDash)         _ }
	regex          { Tn (TokenRegex $$)     _ }
	ADD            { Tn (TokenAdd)          _ }
	'.'            { Tn (TokenDot)          _ }
	bigField       { Tn (TokenBigField $$)  _ }
	string         { Tn (TokenString $$)    _ }
	True           { Tn (TokenTrue)         _ }
	False          { Tn (TokenFalse)        _ }
	';'            { Tn (TokenSemicolon)    _ }
	'!='           { Tn (TokenNotEquals)    _ }
	','            { Tn (TokenComma)        _ }
	NodeType       { Tn (TokenNodeType)     _ }
	RelationType   { Tn (TokenRelationType) _ }
	GETRELATION    { Tn (TokenGetRelation)  _ }
	CONTAINS       { Tn (TokenContains)     _ }
	GETNODE        { Tn (TokenGetNode)      _ }
	'+'            { Tn (TokenPlus)         _ }
	'*'            { Tn (TokenStar)         _ }
	'/'            { Tn (TokenFSlash)       _ }
	'+='           { Tn (TokenIncrement)    _ }
	'-='           { Tn (TokenDecrement)    _ }
	EXCLUDE        { Tn (TokenExclude)      _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Program         rules 1, 2
	Statement       rules 3, 4, 5, 6
	Expr            rules 7, 8, 9, 10, 11, 12
	LiteralExpr     rules 13, 14, 15, 16, 17, 18
	AssignExpr      rules 19, 20, 21, 22, 23
	Assignable      rules 24, 25, 26
	FuncAppExpr     rules 27, 28, 29, 30
	MathExpr        rules 31, 32, 33
	MathTerm        rules 34, 35, 36
	BoolExpr        rules 37, 38, 39
	SimpleBoolExpr  rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52
	IfStatement     rules 53, 54
	ForStatement    rule  55
	StringList      rules 56, 57
	Type            rules 58, 59, 60, 61, 62, 63

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . Program                          (rule 0)

	int            shift, and enter state 15
	READFILE       shift, and enter state 16
	PRINT          shift, and enter state 17
	'('            shift, and enter state 18
	GraphType      shift, and enter state 19
	IntegerType    shift, and enter state 20
	StringType     shift, and enter state 21
	BooleanType    shift, and enter state 22
	IF             shift, and enter state 23
	FOR            shift, and enter state 24
	var            shift, and enter state 25
	'-'            shift, and enter state 26
	regex          shift, and enter state 27
	bigField       shift, and enter state 28
	string         shift, and enter state 29
	True           shift, and enter state 30
	False          shift, and enter state 31
	NodeType       shift, and enter state 32
	RelationType   shift, and enter state 33
	%eof           reduce using rule 2

	Program        goto state 34
	Statement      goto state 2
	Expr           goto state 3
	LiteralExpr    goto state 4
	AssignExpr     goto state 5
	Assignable     goto state 6
	FuncAppExpr    goto state 7
	MathExpr       goto state 8
	MathTerm       goto state 9
	BoolExpr       goto state 10
	SimpleBoolExpr goto state 11
	IfStatement    goto state 12
	ForStatement   goto state 13
	Type           goto state 14

State 1

	Program -> . Statement Program                      (rule 1)

	int            shift, and enter state 15
	READFILE       shift, and enter state 16
	PRINT          shift, and enter state 17
	'('            shift, and enter state 18
	GraphType      shift, and enter state 19
	IntegerType    shift, and enter state 20
	StringType     shift, and enter state 21
	BooleanType    shift, and enter state 22
	IF             shift, and enter state 23
	FOR            shift, and enter state 24
	var            shift, and enter state 25
	'-'            shift, and enter state 26
	regex          shift, and enter state 27
	bigField       shift, and enter state 28
	string         shift, and enter state 29
	True           shift, and enter state 30
	False          shift, and enter state 31
	NodeType       shift, and enter state 32
	RelationType   shift, and enter state 33

	Statement      goto state 2
	Expr           goto state 3
	LiteralExpr    goto state 4
	AssignExpr     goto state 5
	Assignable     goto state 6
	FuncAppExpr    goto state 7
	MathExpr       goto state 8
	MathTerm       goto state 9
	BoolExpr       goto state 10
	SimpleBoolExpr goto state 11
	IfStatement    goto state 12
	ForStatement   goto state 13
	Type           goto state 14

State 2

	Program -> Statement . Program                      (rule 1)

	int            shift, and enter state 15
	READFILE       shift, and enter state 16
	PRINT          shift, and enter state 17
	'('            shift, and enter state 18
	GraphType      shift, and enter state 19
	IntegerType    shift, and enter state 20
	StringType     shift, and enter state 21
	BooleanType    shift, and enter state 22
	'}'            reduce using rule 2
	IF             shift, and enter state 23
	FOR            shift, and enter state 24
	var            shift, and enter state 25
	'-'            shift, and enter state 26
	regex          shift, and enter state 27
	bigField       shift, and enter state 28
	string         shift, and enter state 29
	True           shift, and enter state 30
	False          shift, and enter state 31
	NodeType       shift, and enter state 32
	RelationType   shift, and enter state 33
	%eof           reduce using rule 2

	Program        goto state 62
	Statement      goto state 2
	Expr           goto state 3
	LiteralExpr    goto state 4
	AssignExpr     goto state 5
	Assignable     goto state 6
	FuncAppExpr    goto state 7
	MathExpr       goto state 8
	MathTerm       goto state 9
	BoolExpr       goto state 10
	SimpleBoolExpr goto state 11
	IfStatement    goto state 12
	ForStatement   goto state 13
	Type           goto state 14

State 3

	Statement -> Expr . ';'                             (rule 3)
	BoolExpr -> Expr . '&&' Expr                        (rule 37)
	BoolExpr -> Expr . '||' Expr                        (rule 38)
	SimpleBoolExpr -> Expr . '==' Expr                  (rule 42)
	SimpleBoolExpr -> Expr . '!=' Expr                  (rule 43)
	SimpleBoolExpr -> Expr . '<' Expr                   (rule 44)
	SimpleBoolExpr -> Expr . '>' Expr                   (rule 45)
	SimpleBoolExpr -> Expr . '<=' Expr                  (rule 46)
	SimpleBoolExpr -> Expr . '>=' Expr                  (rule 47)
	SimpleBoolExpr -> Expr . '.' CONTAINS '(' StringList ')'    (rule 52)

	'&&'           shift, and enter state 52
	'||'           shift, and enter state 53
	'>='           shift, and enter state 54
	'<='           shift, and enter state 55
	'>'            shift, and enter state 56
	'<'            shift, and enter state 57
	'=='           shift, and enter state 58
	'.'            shift, and enter state 59
	';'            shift, and enter state 60
	'!='           shift, and enter state 61


State 4

	Expr -> LiteralExpr .                               (rule 11)

	'&&'           reduce using rule 11
	'||'           reduce using rule 11
	')'            reduce using rule 11
	'>='           reduce using rule 11
	'<='           reduce using rule 11
	'>'            reduce using rule 11
	'<'            reduce using rule 11
	'=='           reduce using rule 11
	']'            reduce using rule 11
	'.'            reduce using rule 11
	';'            reduce using rule 11
	'!='           reduce using rule 11


State 5

	Expr -> AssignExpr .                                (rule 9)

	'&&'           reduce using rule 9
	'||'           reduce using rule 9
	')'            reduce using rule 9
	'>='           reduce using rule 9
	'<='           reduce using rule 9
	'>'            reduce using rule 9
	'<'            reduce using rule 9
	'=='           reduce using rule 9
	']'            reduce using rule 9
	'.'            reduce using rule 9
	';'            reduce using rule 9
	'!='           reduce using rule 9


State 6

	Expr -> Assignable .                                (rule 10)
	AssignExpr -> Assignable . '=' Expr                 (rule 20)
	AssignExpr -> Assignable . '+=' Expr                (rule 22)
	AssignExpr -> Assignable . '-=' Expr                (rule 23)

	'&&'           reduce using rule 10
	'||'           reduce using rule 10
	')'            reduce using rule 10
	'>='           reduce using rule 10
	'<='           reduce using rule 10
	'>'            reduce using rule 10
	'<'            reduce using rule 10
	'='            shift, and enter state 49
	'=='           reduce using rule 10
	']'            reduce using rule 10
	'.'            reduce using rule 10
	';'            reduce using rule 10
	'!='           reduce using rule 10
	'+='           shift, and enter state 50
	'-='           shift, and enter state 51


State 7

	Expr -> FuncAppExpr .                               (rule 7)

	'&&'           reduce using rule 7
	'||'           reduce using rule 7
	')'            reduce using rule 7
	'>='           reduce using rule 7
	'<='           reduce using rule 7
	'>'            reduce using rule 7
	'<'            reduce using rule 7
	'=='           reduce using rule 7
	']'            reduce using rule 7
	'.'            reduce using rule 7
	';'            reduce using rule 7
	'!='           reduce using rule 7


State 8

	LiteralExpr -> MathExpr .                           (rule 14)
	MathExpr -> MathExpr . '+' MathExpr                 (rule 32)
	MathExpr -> MathExpr . '-' MathExpr                 (rule 33)
	MathTerm -> MathExpr . '*' MathExpr                 (rule 34)
	MathTerm -> MathExpr . '/' MathExpr                 (rule 35)

	'&&'           reduce using rule 14
	'||'           reduce using rule 14
	')'            reduce using rule 14
	'>='           reduce using rule 14
	'<='           reduce using rule 14
	'>'            reduce using rule 14
	'<'            reduce using rule 14
	'=='           reduce using rule 14
	']'            reduce using rule 14
	'-'            shift, and enter state 45
	'.'            reduce using rule 14
	';'            reduce using rule 14
	'!='           reduce using rule 14
	'+'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48


State 9

	MathExpr -> MathTerm .                              (rule 31)

	'&&'           reduce using rule 31
	'||'           reduce using rule 31
	')'            reduce using rule 31
	'>='           reduce using rule 31
	'<='           reduce using rule 31
	'>'            reduce using rule 31
	'<'            reduce using rule 31
	'=='           reduce using rule 31
	']'            reduce using rule 31
	'-'            reduce using rule 31
	'.'            reduce using rule 31
	';'            reduce using rule 31
	'!='           reduce using rule 31
	'+'            reduce using rule 31
	'*'            reduce using rule 31
	'/'            reduce using rule 31


State 10

	Expr -> BoolExpr .                                  (rule 8)

	'&&'           reduce using rule 8
	'||'           reduce using rule 8
	')'            reduce using rule 8
	'>='           reduce using rule 8
	'<='           reduce using rule 8
	'>'            reduce using rule 8
	'<'            reduce using rule 8
	'=='           reduce using rule 8
	']'            reduce using rule 8
	'.'            reduce using rule 8
	';'            reduce using rule 8
	'!='           reduce using rule 8


State 11

	BoolExpr -> SimpleBoolExpr .                        (rule 39)

	'&&'           reduce using rule 39
	'||'           reduce using rule 39
	')'            reduce using rule 39
	'>='           reduce using rule 39
	'<='           reduce using rule 39
	'>'            reduce using rule 39
	'<'            reduce using rule 39
	'=='           reduce using rule 39
	']'            reduce using rule 39
	'.'            reduce using rule 39
	';'            reduce using rule 39
	'!='           reduce using rule 39


State 12

	Statement -> IfStatement .                          (rule 4)

	int            reduce using rule 4
	READFILE       reduce using rule 4
	PRINT          reduce using rule 4
	'('            reduce using rule 4
	GraphType      reduce using rule 4
	IntegerType    reduce using rule 4
	StringType     reduce using rule 4
	BooleanType    reduce using rule 4
	'}'            reduce using rule 4
	IF             reduce using rule 4
	FOR            reduce using rule 4
	var            reduce using rule 4
	'-'            reduce using rule 4
	regex          reduce using rule 4
	bigField       reduce using rule 4
	string         reduce using rule 4
	True           reduce using rule 4
	False          reduce using rule 4
	NodeType       reduce using rule 4
	RelationType   reduce using rule 4
	%eof           reduce using rule 4


State 13

	Statement -> ForStatement .                         (rule 5)

	int            reduce using rule 5
	READFILE       reduce using rule 5
	PRINT          reduce using rule 5
	'('            reduce using rule 5
	GraphType      reduce using rule 5
	IntegerType    reduce using rule 5
	StringType     reduce using rule 5
	BooleanType    reduce using rule 5
	'}'            reduce using rule 5
	IF             reduce using rule 5
	FOR            reduce using rule 5
	var            reduce using rule 5
	'-'            reduce using rule 5
	regex          reduce using rule 5
	bigField       reduce using rule 5
	string         reduce using rule 5
	True           reduce using rule 5
	False          reduce using rule 5
	NodeType       reduce using rule 5
	RelationType   reduce using rule 5
	%eof           reduce using rule 5


State 14

	AssignExpr -> Type . var '=' Expr                   (rule 19)
	AssignExpr -> Type . var                            (rule 21)

	var            shift, and enter state 44


State 15

	MathTerm -> int .                                   (rule 36)

	'&&'           reduce using rule 36
	'||'           reduce using rule 36
	')'            reduce using rule 36
	'>='           reduce using rule 36
	'<='           reduce using rule 36
	'>'            reduce using rule 36
	'<'            reduce using rule 36
	'=='           reduce using rule 36
	']'            reduce using rule 36
	'-'            reduce using rule 36
	'.'            reduce using rule 36
	';'            reduce using rule 36
	'!='           reduce using rule 36
	'+'            reduce using rule 36
	'*'            reduce using rule 36
	'/'            reduce using rule 36


State 16

	LiteralExpr -> READFILE . '(' string ')' ';'        (rule 13)

	'('            shift, and enter state 43


State 17

	Statement -> PRINT . '(' var ')' ';'                (rule 6)

	'('            shift, and enter state 42


State 18

	Expr -> '(' . Expr ')'                              (rule 12)
	SimpleBoolExpr -> '(' . BoolExpr ')'                (rule 50)

	int            shift, and enter state 15
	READFILE       shift, and enter state 16
	'('            shift, and enter state 18
	GraphType      shift, and enter state 19
	IntegerType    shift, and enter state 20
	StringType     shift, and enter state 21
	BooleanType    shift, and enter state 22
	var            shift, and enter state 25
	'-'            shift, and enter state 26
	regex          shift, and enter state 27
	bigField       shift, and enter state 28
	string         shift, and enter state 29
	True           shift, and enter state 30
	False          shift, and enter state 31
	NodeType       shift, and enter state 32
	RelationType   shift, and enter state 33

	Expr           goto state 40
	LiteralExpr    goto state 4
	AssignExpr     goto state 5
	Assignable     goto state 6
	FuncAppExpr    goto state 7
	MathExpr       goto state 8
	MathTerm       goto state 9
	BoolExpr       goto state 41
	SimpleBoolExpr goto state 11
	Type           goto state 14

State 19

	Type -> GraphType .                                 (rule 58)

	var            reduce using rule 58


State 20

	Type -> IntegerType .                               (rule 59)

	var            reduce using rule 59


State 21

	Type -> StringType .                                (rule 60)

	var            reduce using rule 60


State 22

	Type -> BooleanType .                               (rule 61)

	var            reduce using rule 61


State 23

	IfStatement -> IF . '(' BoolExpr ')' '{' Program '}'    (rule 53)
	IfStatement -> IF . '(' BoolExpr ')' '{' Program '}' ELSE '{' Program '}'    (rule 54)

	'('            shift, and enter state 39


State 24

	ForStatement -> FOR . '(' Type var ':' Expr ')' '{' Program '}'    (rule 55)

	'('            shift, and enter state 38


State 25

	LiteralExpr -> var . '.' GETNODE '(' Expr ')'       (rule 18)
	Assignable -> var .                                 (rule 24)
	Assignable -> var . '.' var                         (rule 25)
	Assignable -> var . '.' bigField                    (rule 26)
	FuncAppExpr -> var . '.' MATCH '(' BoolExpr ')'     (rule 27)
	FuncAppExpr -> var . '.' ADD '(' Expr ')'           (rule 28)
	FuncAppExpr -> var . '.' GETRELATION '(' BoolExpr ')'    (rule 29)
	FuncAppExpr -> var . '.' EXCLUDE '(' Expr ')'       (rule 30)
	SimpleBoolExpr -> var . '-' '[' BoolExpr ']' '->'    (rule 49)
	SimpleBoolExpr -> var . '-' '[' BoolExpr ']' '->' var    (rule 51)

	'&&'           reduce using rule 24
	'||'           reduce using rule 24
	')'            reduce using rule 24
	'>='           reduce using rule 24
	'<='           reduce using rule 24
	'>'            reduce using rule 24
	'<'            reduce using rule 24
	'='            reduce using rule 24
	'=='           reduce using rule 24
	']'            reduce using rule 24
	'-'            shift, and enter state 36
	'.'            shift, and enter state 37
	';'            reduce using rule 24
	'!='           reduce using rule 24
	'+='           reduce using rule 24
	'-='           reduce using rule 24


State 26

	SimpleBoolExpr -> '-' . '[' BoolExpr ']' '->' var    (rule 48)

	'['            shift, and enter state 35


State 27

	LiteralExpr -> regex .                              (rule 17)

	'&&'           reduce using rule 17
	'||'           reduce using rule 17
	')'            reduce using rule 17
	'>='           reduce using rule 17
	'<='           reduce using rule 17
	'>'            reduce using rule 17
	'<'            reduce using rule 17
	'=='           reduce using rule 17
	']'            reduce using rule 17
	'.'            reduce using rule 17
	';'            reduce using rule 17
	'!='           reduce using rule 17


State 28

	LiteralExpr -> bigField .                           (rule 15)

	'&&'           reduce using rule 15
	'||'           reduce using rule 15
	')'            reduce using rule 15
	'>='           reduce using rule 15
	'<='           reduce using rule 15
	'>'            reduce using rule 15
	'<'            reduce using rule 15
	'=='           reduce using rule 15
	']'            reduce using rule 15
	'.'            reduce using rule 15
	';'            reduce using rule 15
	'!='           reduce using rule 15


State 29

	LiteralExpr -> string .                             (rule 16)

	'&&'           reduce using rule 16
	'||'           reduce using rule 16
	')'            reduce using rule 16
	'>='           reduce using rule 16
	'<='           reduce using rule 16
	'>'            reduce using rule 16
	'<'            reduce using rule 16
	'=='           reduce using rule 16
	']'            reduce using rule 16
	'.'            reduce using rule 16
	';'            reduce using rule 16
	'!='           reduce using rule 16


State 30

	SimpleBoolExpr -> True .                            (rule 40)

	'&&'           reduce using rule 40
	'||'           reduce using rule 40
	')'            reduce using rule 40
	'>='           reduce using rule 40
	'<='           reduce using rule 40
	'>'            reduce using rule 40
	'<'            reduce using rule 40
	'=='           reduce using rule 40
	']'            reduce using rule 40
	'.'            reduce using rule 40
	';'            reduce using rule 40
	'!='           reduce using rule 40


State 31

	SimpleBoolExpr -> False .                           (rule 41)

	'&&'           reduce using rule 41
	'||'           reduce using rule 41
	')'            reduce using rule 41
	'>='           reduce using rule 41
	'<='           reduce using rule 41
	'>'            reduce using rule 41
	'<'            reduce using rule 41
	'=='           reduce using rule 41
	']'            reduce using rule 41
	'.'            reduce using rule 41
	';'            reduce using rule 41
	'!='           reduce using rule 41


State 32

	Type -> NodeType .                                  (rule 62)

	var            reduce using rule 62


State 33

	Type -> RelationType .                              (rule 63)

	var            reduce using rule 63


State 34

	%start_parser -> Program .                          (rule 0)

	%eof           accept


State 35

	SimpleBoolExpr -> '-' '[' . BoolExpr ']' '->' var    (rule 48)

	int            shift, and enter state 15
	READFILE       shift, and enter state 16
	'('            shift, and enter state 18
	GraphType      shift, and enter state 19
	IntegerType    shift, and enter state 20
	StringType     shift, and enter state 21
	BooleanType    shift, and enter state 22
	var            shift, and enter state 25
	'-'            shift, and enter state 26
	regex          shift, and enter state 27
	bigField       shift, and enter state 28
	string         shift, and enter state 29
	True           shift, and enter state 30
	False          shift, and enter state 31
	NodeType       shift, and enter state 32
	RelationType   shift, and enter state 33
